[gd_scene format=3 uid="uid://04m2i41b26xa"]

[ext_resource type="Script" uid="uid://c6yvnpxqt6x2u" path="res://scripts/monster/monster.gd" id="1_0ix62"]
[ext_resource type="Script" uid="uid://dlyn7myxb1v18" path="res://scripts/statemachine/statemachine.gd" id="1_jlss8"]
[ext_resource type="Script" uid="uid://buh1dyxd4gil8" path="res://scripts/monster/wander.gd" id="2_gdl1p"]
[ext_resource type="AudioStream" uid="uid://7m2mctf82f43" path="res://assets/sounds/monster/thud_3.mp3" id="2_gp4s5"]
[ext_resource type="Script" uid="uid://gd3kygbrdkps" path="res://scripts/monster/search.gd" id="3_0xprk"]
[ext_resource type="AudioStream" uid="uid://ck0s5sftvqvug" path="res://assets/sounds/monster/thud_1.mp3" id="3_gdl1p"]
[ext_resource type="AudioStream" uid="uid://cme26q6qadno" path="res://assets/sounds/monster/thud_2.mp3" id="4_v8ewj"]
[ext_resource type="Script" uid="uid://u07fggjsf3m3" path="res://scripts/monster/attack.gd" id="5_v8i5r"]
[ext_resource type="AudioStream" uid="uid://cyrd1qxasq04b" path="res://assets/sounds/monster/purr_1.mp3" id="6_fttm7"]
[ext_resource type="AudioStream" uid="uid://s1lcukk3380k" path="res://assets/sounds/monster/purr_2.mp3" id="7_akk5r"]
[ext_resource type="AudioStream" uid="uid://b6hv8h12hswr" path="res://assets/sounds/monster/purr_3.mp3" id="8_x2c6u"]
[ext_resource type="AudioStream" uid="uid://dh2onnnkei140" path="res://assets/sounds/monster/purr_4.mp3" id="9_ei7v0"]
[ext_resource type="AudioStream" uid="uid://ddh6fsuveww0" path="res://assets/sounds/monster/groan_1.mp3" id="21_6h0bv"]
[ext_resource type="AudioStream" uid="uid://cbvu03qhqhkhx" path="res://assets/sounds/monster/groan_2.mp3" id="22_0xprk"]
[ext_resource type="AudioStream" uid="uid://c3iss0ih36qw6" path="res://assets/sounds/monster/groan_3.mp3" id="23_0ix62"]
[ext_resource type="AudioStream" uid="uid://baxhgylquy6wk" path="res://assets/sounds/monster/groan_4.mp3" id="24_8luhx"]
[ext_resource type="AudioStream" uid="uid://bco4u4ji4pxsh" path="res://assets/sounds/monster/groan_5.mp3" id="25_xt71w"]
[ext_resource type="AudioStream" uid="uid://cgbn16af6nhnq" path="res://assets/sounds/monster/groan_6.mp3" id="26_ok33r"]
[ext_resource type="AudioStream" uid="uid://bgvgjjnfaesjj" path="res://assets/sounds/monster/groan_7.mp3" id="27_hejqc"]
[ext_resource type="AudioStream" uid="uid://cne2ieyn5vgjw" path="res://assets/sounds/monster/groan_8.mp3" id="30_8luhx"]
[ext_resource type="AudioStream" uid="uid://dxnakwin4gu5e" path="res://assets/sounds/monster/screech_1.mp3" id="32_nnbp4"]
[ext_resource type="AudioStream" uid="uid://cm8otp4qgl2kv" path="res://assets/sounds/monster/screech_2.mp3" id="33_4suij"]
[ext_resource type="AudioStream" uid="uid://gdtsec8s0kmq" path="res://assets/sounds/monster/screech_3.mp3" id="34_ysgge"]
[ext_resource type="PackedScene" uid="uid://jbyy44t3pgqv" path="res://scenes/monster/monster_visuals.tscn" id="37_4suij"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_yce20"]
random_pitch = 1.0594631
random_volume_offset_db = 1.0
streams_count = 3
stream_0/stream = ExtResource("2_gp4s5")
stream_1/stream = ExtResource("3_gdl1p")
stream_2/stream = ExtResource("4_v8ewj")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_1v1i4"]
random_pitch = 1.0594631
random_volume_offset_db = 1.0
streams_count = 4
stream_0/stream = ExtResource("6_fttm7")
stream_1/stream = ExtResource("7_akk5r")
stream_2/stream = ExtResource("8_x2c6u")
stream_3/stream = ExtResource("9_ei7v0")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_tk6rn"]
random_pitch = 1.3348398
random_volume_offset_db = 5.0
streams_count = 8
stream_0/stream = ExtResource("21_6h0bv")
stream_1/stream = ExtResource("22_0xprk")
stream_2/stream = ExtResource("23_0ix62")
stream_3/stream = ExtResource("24_8luhx")
stream_4/stream = ExtResource("25_xt71w")
stream_5/stream = ExtResource("26_ok33r")
stream_6/stream = ExtResource("27_hejqc")
stream_7/stream = ExtResource("30_8luhx")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_l2ec5"]
random_pitch = 1.3348398
random_volume_offset_db = 5.0
streams_count = 3
stream_0/stream = ExtResource("32_nnbp4")
stream_1/stream = ExtResource("33_4suij")
stream_2/stream = ExtResource("34_ysgge")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_uhv47"]
height = 0.3729248

[sub_resource type="SphereShape3D" id="SphereShape3D_0ix62"]
radius = 25.0

[sub_resource type="SphereShape3D" id="SphereShape3D_8luhx"]
radius = 5.0

[node name="monster" type="CharacterBody3D" unique_id=832945777 node_paths=PackedStringArray("monster_steps", "purr_player", "groan_player", "screech_player", "step_timer", "search_timer", "screech_timer", "wander_timer", "nav_agent", "sight_rays")]
collision_layer = 3
script = ExtResource("1_0ix62")
monster_steps = NodePath("heartbeat")
purr_player = NodePath("purrs")
groan_player = NodePath("groans")
screech_player = NodePath("screech")
step_timer = NodePath("logic/steps_timer")
search_timer = NodePath("logic/search_timer")
screech_timer = NodePath("logic/screech_timer")
wander_timer = NodePath("logic/wander_timer")
nav_agent = NodePath("NavigationAgent3D")
sight_rays = [NodePath("sight"), NodePath("sight/sight2"), NodePath("sight/sight3"), NodePath("sight/sight4"), NodePath("sight/sight5")]

[node name="logic" type="Node" parent="." unique_id=92862137]

[node name="statemachine" type="Node" parent="logic" unique_id=901969623 node_paths=PackedStringArray("initial_state")]
script = ExtResource("1_jlss8")
initial_state = NodePath("wander")

[node name="wander" type="Node" parent="logic/statemachine" unique_id=224507659 node_paths=PackedStringArray("monster")]
script = ExtResource("2_gdl1p")
monster = NodePath("../../..")

[node name="search" type="Node" parent="logic/statemachine" unique_id=1996475802 node_paths=PackedStringArray("monster")]
script = ExtResource("3_0xprk")
monster = NodePath("../../..")

[node name="attack" type="Node" parent="logic/statemachine" unique_id=298553455 node_paths=PackedStringArray("monster")]
script = ExtResource("5_v8i5r")
sound_chance = 5
monster = NodePath("../../..")

[node name="screech_timer" type="Timer" parent="logic" unique_id=1549204285]
wait_time = 25.0
autostart = true

[node name="steps_timer" type="Timer" parent="logic" unique_id=1877996004]
wait_time = 1.5
autostart = true

[node name="search_timer" type="Timer" parent="logic" unique_id=1490241218]
wait_time = 10.0

[node name="wander_timer" type="Timer" parent="logic" unique_id=261145330]
wait_time = 30.0
autostart = true

[node name="heartbeat" type="AudioStreamPlayer3D" parent="." unique_id=53316577]
stream = SubResource("AudioStreamRandomizer_yce20")
volume_db = -20.0
max_db = -20.0
pitch_scale = 0.5
max_polyphony = 5
bus = &"heartbeat"

[node name="purrs" type="AudioStreamPlayer3D" parent="." unique_id=1326645981]
stream = SubResource("AudioStreamRandomizer_1v1i4")
pitch_scale = 0.5
max_polyphony = 5
bus = &"purrs"

[node name="groans" type="AudioStreamPlayer3D" parent="." unique_id=402786154]
stream = SubResource("AudioStreamRandomizer_tk6rn")
pitch_scale = 2.0
max_polyphony = 5
bus = &"groans"

[node name="screech" type="AudioStreamPlayer3D" parent="." unique_id=257641427]
stream = SubResource("AudioStreamRandomizer_l2ec5")
volume_db = -5.0
max_db = -5.0
pitch_scale = 2.0
max_polyphony = 5

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="." unique_id=2063737106]
avoidance_enabled = true
use_3d_avoidance = true
avoidance_layers = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=2000773784]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5532837, -0.31553113)
shape = SubResource("CylinderShape3D_uhv47")

[node name="large_hearing_radius" type="Area3D" parent="." unique_id=1980168848]
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="large_hearing_radius" unique_id=297386381]
shape = SubResource("SphereShape3D_0ix62")

[node name="hearing_radius" type="Area3D" parent="." unique_id=1451825290]
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="hearing_radius" unique_id=8737666]
shape = SubResource("SphereShape3D_8luhx")

[node name="sight" type="RayCast3D" parent="." unique_id=262005093]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, 0, 0, 0)
target_position = Vector3(0, 0, 20)

[node name="sight2" type="RayCast3D" parent="sight" unique_id=2127567241]
transform = Transform3D(0.98256415, 7.621459e-10, -0.18592386, 7.621459e-10, 1, 8.12699e-09, 0.18592386, -8.12699e-09, 0.98256415, 0, 0, 0)
target_position = Vector3(0, 0, 20)

[node name="sight3" type="RayCast3D" parent="sight" unique_id=464826459]
transform = Transform3D(0.9502388, 2.1751312e-09, 0.3115224, 2.1751312e-09, 1, -1.3617076e-08, -0.3115224, 1.3617076e-08, 0.9502388, 0, 0, 0)
target_position = Vector3(0, 0, 20)

[node name="sight4" type="RayCast3D" parent="sight" unique_id=1664745444]
transform = Transform3D(1, -3.9659298e-10, 5.8748664e-09, -3.9659298e-10, 0.99092704, 0.13440128, -5.874866e-09, -0.13440128, 0.99092704, 0, 0, 0)
target_position = Vector3(0, 0, 20)

[node name="sight5" type="RayCast3D" parent="sight" unique_id=1035028372]
transform = Transform3D(1, -3.1943515e-10, -5.2748272e-09, -3.194316e-10, 0.9926923, -0.120674, 5.2748272e-09, 0.120674, 0.9926923, 0, 0, 0)
target_position = Vector3(0, 0, 20)

[node name="monster" parent="." unique_id=660503573 instance=ExtResource("37_4suij")]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, -0.4427467, 0)

[node name="l_hand" parent="monster/Armature/Skeleton3D" parent_id_path=PackedInt32Array(660503573, 1824726652) index="2" unique_id=1925841840]
transform = Transform3D(0.7687968, -0.63817203, 0.041077107, -0.589867, -0.68286294, 0.43099236, -0.24699743, -0.35557568, -0.9014198, 1.0166242, -0.4120177, 1.3301709)

[node name="l_forearm" parent="monster/Armature/Skeleton3D" parent_id_path=PackedInt32Array(660503573, 1824726652) index="3" unique_id=1328960560]
transform = Transform3D(0.5600242, -0.5237246, -0.6419383, -0.8260138, -0.29327887, -0.48133984, 0.0638227, 0.79981244, -0.59684724, 1.656951, -0.053443015, 0.3522879)

[node name="l_arm" parent="monster/Armature/Skeleton3D" parent_id_path=PackedInt32Array(660503573, 1824726652) index="4" unique_id=2038679607]
transform = Transform3D(0.3366074, 0.8696234, -0.36117834, -0.5779745, -0.112004176, -0.8083316, -0.7433978, 0.48084274, 0.46491867, 0.60870117, 0.08156748, -0.22732306)

[node name="r_hand" parent="monster/Armature/Skeleton3D" parent_id_path=PackedInt32Array(660503573, 1824726652) index="5" unique_id=1326891952]
transform = Transform3D(0.4778279, 0.2169053, -0.8512529, -0.23047747, -0.90413415, -0.359752, -0.8476791, 0.36809456, -0.38202888, -1.0260432, -0.32768905, 1.3074408)

[node name="r_forearm" parent="monster/Armature/Skeleton3D" parent_id_path=PackedInt32Array(660503573, 1824726652) index="6" unique_id=1626055945]
transform = Transform3D(0.57572734, 0.5218402, -0.62946004, -0.6119446, -0.23557165, -0.7550027, -0.5422741, 0.8198708, 0.1837124, -1.6640661, -0.039669916, 0.30503356)

[node name="r_arm" parent="monster/Armature/Skeleton3D" parent_id_path=PackedInt32Array(660503573, 1824726652) index="7" unique_id=1575093946]
transform = Transform3D(0.30782068, -0.8915366, -0.3322772, -0.84981126, -0.100577824, -0.51740146, 0.42786255, 0.44164017, -0.7885981, -0.5894017, 0.08156726, -0.22732258)

[node name="l_foot" parent="monster/Armature/Skeleton3D" parent_id_path=PackedInt32Array(660503573, 1824726652) index="9" unique_id=1357696880]
transform = Transform3D(-0.53617936, -0.50310624, -0.67778695, -0.23706448, -0.6808966, 0.69295, -0.8101305, 0.5322253, 0.245814, 1.9602745, -0.20224506, -1.6289079)

[node name="l_calf" parent="monster/Armature/Skeleton3D" parent_id_path=PackedInt32Array(660503573, 1824726652) index="10" unique_id=2110775919]
transform = Transform3D(-0.8964089, 0.42167833, 0.13652009, -0.37771517, -0.565613, -0.7330842, -0.23190832, -0.7087092, 0.6662953, 1.367589, 0.59274566, -0.6327898)

[node name="l_leg" parent="monster/Armature/Skeleton3D" parent_id_path=PackedInt32Array(660503573, 1824726652) index="11" unique_id=398573463]
transform = Transform3D(-0.09261616, 0.83037376, -0.5494551, -0.9297889, -0.26956227, -0.25065517, -0.35625005, 0.48766288, 0.7970385, 0.3320531, 0.9289093, -1.2409406)

[node name="r_foot" parent="monster/Armature/Skeleton3D" parent_id_path=PackedInt32Array(660503573, 1824726652) index="12" unique_id=1545686329]
transform = Transform3D(-0.58495677, 0.6902318, -0.4259163, -0.8071422, -0.44382355, 0.3892831, 0.07966402, 0.57148933, 0.8167331, -1.7371513, -0.3659662, -1.4501867)

[node name="r_calf" parent="monster/Armature/Skeleton3D" parent_id_path=PackedInt32Array(660503573, 1824726652) index="13" unique_id=948173683]
transform = Transform3D(-0.9427767, -0.2911385, 0.16251183, 0.10622556, -0.7242722, -0.6812823, 0.31605044, -0.62503433, 0.7137535, -1.327945, 0.65202594, -0.5716775)

[node name="r_leg" parent="monster/Armature/Skeleton3D" parent_id_path=PackedInt32Array(660503573, 1824726652) index="14" unique_id=609327675]
transform = Transform3D(-0.13176064, -0.81405926, -0.56563765, -0.8293455, -0.22202654, 0.5127275, -0.5429773, 0.53666687, -0.6458824, -0.31275418, 0.9289091, -1.24094)

[node name="step_targets" parent="monster/Armature/Skeleton3D" parent_id_path=PackedInt32Array(660503573, 1824726652) index="20" unique_id=2117783646 node_paths=PackedStringArray("body")]
transform = Transform3D(0.99999976, 0, 0, 0, 0.99999976, 0, 0, 0, 0.99999976, -0.045526925, -0.6726974, 0.4075705)
h_off = 0.75
body = NodePath("../../../..")

[node name="r_arm_step_target" parent="monster/Armature/Skeleton3D/step_targets" index="0" unique_id=1917531191]
transform = Transform3D(0.9999999, 0, 0, 0, 0.9999999, 0, 0, 0, 0.9999999, -0.8977476, 0, 1.0403316)

[node name="RayCast3D" parent="monster/Armature/Skeleton3D/step_targets/r_arm_step_target" index="0" unique_id=182663811]
collision_mask = 3

[node name="l_arm_step_target" parent="monster/Armature/Skeleton3D/step_targets" index="1" unique_id=1263795975]
transform = Transform3D(0.9999999, 0, 0, 0, 0.9999999, 0, 0, 0, 0.9999999, 0.81853473, 0, 0.78685)

[node name="RayCast3D" parent="monster/Armature/Skeleton3D/step_targets/l_arm_step_target" index="0" unique_id=1686285805]
collision_mask = 3

[node name="r_leg_step_target" parent="monster/Armature/Skeleton3D/step_targets" index="2" unique_id=1296562492]
transform = Transform3D(0.9999999, 0, 0, 0, 0.9999999, 0, 0, 0, 0.9999999, -1.2145994, 0, -1.4627991)

[node name="RayCast3D" parent="monster/Armature/Skeleton3D/step_targets/r_leg_step_target" index="0" unique_id=1083423952]
collision_mask = 3

[node name="l_leg_step_target" parent="monster/Armature/Skeleton3D/step_targets" index="3" unique_id=1182614964]
transform = Transform3D(0.9999999, 0, 0, 0, 0.9999999, 0, 0, 0, 0.9999999, 1.6581923, 0, -1.6687529)

[node name="RayCast3D" parent="monster/Armature/Skeleton3D/step_targets/l_leg_step_target" index="0" unique_id=1977958791]
collision_mask = 3

[node name="r_arm_target" parent="monster/Armature" parent_id_path=PackedInt32Array(660503573, 761020580) index="1" unique_id=1470774718]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.26932424, -0.74999964, 0.31209916)
step_distance = 0.5

[node name="l_arm_target" parent="monster/Armature" parent_id_path=PackedInt32Array(660503573, 761020580) index="2" unique_id=1749603167]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.24556038, -0.7499997, 0.23605469)
step_distance = 0.5

[node name="r_leg_target" parent="monster/Armature" parent_id_path=PackedInt32Array(660503573, 761020580) index="3" unique_id=253089859]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.36437976, -0.7499997, -0.4388399)
step_distance = 0.5

[node name="l_leg_target" parent="monster/Armature" parent_id_path=PackedInt32Array(660503573, 761020580) index="4" unique_id=707524935]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4974576, -0.74999964, -0.5006261)
step_distance = 0.5

[editable path="monster"]
